@@ -1,3 +1,10 @@
+2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add compilation option to check gradient automatically.
+	* src/roboptim-core-cfsqp-plugin.cc: Add compilation option
+	to check automatically the gradient.
+	* tests/shared-tests: Update sub-module.
+
 2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Update bootstrap to handle submodules.
